--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,12 @@
         android:theme="@style/Theme.MissingPeople"
         tools:targetApi="31">
         <activity
+            android:name=".view.SettingsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.SavedPersonsActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.PersonDetailActivity"
             android:exported="false"
             android:theme="@style/Theme.MissingPeople" />
